feat: implemented password reset feature

--- a/ecommerce/account/templates/account/profile-management.html
+++ b/ecommerce/account/templates/account/profile-management.html
@@ -21,10 +21,19 @@
 
         <br>
 
+        <div class="container bg-white shadow-md p-5 form-layout">
+
+            <h2> <i class="fa fa-address-book" aria-hidden="true"></i> &nbsp; Profile management </h2>
+
+            <hr>
+
+        </div>
+
+        <br>
 
         <div class="container bg-white shadow-md p-5 form-layout">
 
-            <h3> Update your account </h3>
+            <h4> Update your account </h4>
 
             <hr>
 
@@ -45,7 +54,7 @@
                 <br> 
 
                 
-                <button type="submit" class="btn btn-primary navbar-btn text-white w-100 p-2"> <i class="fa fa-key" aria-hidden="true"></i> &nbsp; Update your account </button>
+                <button type="submit" class="btn btn-primary navbar-btn text-white"> <i class="fa fa-key" aria-hidden="true"></i> &nbsp; Update your account </button>
 
                 <br> 
             </form>
@@ -57,7 +66,7 @@
         
         <div class="container bg-white shadow-md p-5 form-layout">
 
-            <h3> Delete your account </h3>
+            <h4> Delete your account </h4>
 
             <hr>
 
