--- a/ecommerce/account/templates/account/delete-account.html
+++ b/ecommerce/account/templates/account/delete-account.html
@@ -28,17 +28,18 @@
 
             <hr>
 
- 
+            <p> Are you sure that you want to delete your account? </p>
 
             <form method="POST" autocomplete="off">
 
                 {% csrf_token %}
-
-                <p> Are you sure that you want to delete your account? </p>
                 
-                <button type="submit" class="btn btn-danger navbar-btn text-white w-100 p-2"> <i class="fa fa-key" aria-hidden="true"></i> &nbsp; Delete your account </button>
+                <button type="submit" class="btn btn-danger navbar-btn text-white"> Delete your account </button>
 
-                <br> 
+                <br><br>
+
+                <a class="btn btn-success navbar-btn text-white" type="button" href="{% url 'profile-management' %}"> <i class="fa fa-arrow-left" aria-hidden="true"></i> &nbsp; Go back </a> 
+
             </form>
 
         </div>
