--- a/ecommerce/account/templates/account/registration/email-verification.html
+++ b/ecommerce/account/templates/account/registration/email-verification.html
@@ -7,7 +7,7 @@ Thank you for registering on our website.
 Please be so kind as to verify your email by clicking the link below:
 
 
-https://{{domain}}{% url 'email-verification' uidb64=uid token=token %}
+http://{{domain}}{% url 'email-verification' uidb64=uid token=token %}
 
 
 {% endautoescape %}
