--- a/ecommerce/account/templates/account/dashboard.html
+++ b/ecommerce/account/templates/account/dashboard.html
@@ -46,7 +46,7 @@
 
             <p> Track all of your orders here... </p>
 
-            <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'user-logout' %}"> My orders </a> 
+            <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'track-orders' %}"> My orders </a> 
 
         </div>
 
@@ -61,6 +61,21 @@
             <p> Update or delete your account </p>
 
             <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'profile-management' %}"> Profile management</a> 
+
+            
+        </div>
+
+        <br>
+
+        <div class="container bg-white shadow-md p-5 form-layout">
+
+            <h4> Manage Shipping </h4>
+
+            <hr>
+
+            <p> Enter in a shipping address </p>
+
+            <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'manage-shipping' %}"> Manage shipping </a> 
 
             
         </div>
