--- a/ecommerce/cart/templates/cart/cart-summary.html
+++ b/ecommerce/cart/templates/cart/cart-summary.html
@@ -121,10 +121,11 @@
  
         <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> {{cart.get_total}} </div></div>
  
-      </div>
- 
+        <br>
 
-    </div>
+        <a href="{% url 'checkout' %}" class="btn btn-primary my-2"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> &nbsp; Proceed to checkout </a>
+
+      </div>
   
     <br>
 
